modified dosa department to test column break. fixed dosa department column item break in css

--- a/public/css/sass/dosa/dosa.scss
+++ b/public/css/sass/dosa/dosa.scss
@@ -187,6 +187,11 @@ $dosa-footer-text-color: #eeeeee;
                             width: 150%;
                             right: 0;
                         }
+                        li {
+                            -webkit-column-break-inside: avoid;
+                            -moz-column-break-inside: avoid;
+                            column-break-inside: avoid;
+                        }
                     }
                     &.topics {
                         &:hover h2 {
