--- a/public/css/tiny-mce.css
+++ b/public/css/tiny-mce.css
@@ -26,16 +26,16 @@
   display: none;
 }
 .stamp.dept-color-1 ~ .viewport .mceContentBody table.sa-table tbody th {
-  background-color: #3b1151;
+  background-color: #3B1151;
 }
 .stamp.dept-color-2 ~ .viewport .mceContentBody table.sa-table tbody th {
   background-color: #006e8b;
 }
 .stamp.dept-color-3 ~ .viewport .mceContentBody table.sa-table tbody th {
-  background-color: #5c2483;
+  background-color: #5C2483;
 }
 .stamp.dept-color-4 ~ .viewport .mceContentBody table.sa-table tbody th {
-  background-color: #46bab8;
+  background-color: #46BAB8;
 }
 .mceContentBody table.sa-table tbody th[scope=row] {
   text-align: left;
@@ -44,13 +44,13 @@
   background-color: #006e8b;
 }
 .stamp.dept-color-2 ~ .viewport .mceContentBody table.sa-table tbody th[scope=row] {
-  background-color: #3b1151;
+  background-color: #3B1151;
 }
 .stamp.dept-color-3 ~ .viewport .mceContentBody table.sa-table tbody th[scope=row] {
-  background-color: #007b9a;
+  background-color: #007B9A;
 }
 .stamp.dept-color-4 ~ .viewport .mceContentBody table.sa-table tbody th[scope=row] {
-  background-color: #3b1151;
+  background-color: #3B1151;
 }
 .mceContentBody table.sa-table tbody tr:nth-child(2n) {
   background-color: #e4e3e4;
@@ -79,16 +79,16 @@
   font-family: 'Oswald', sans-serif;
 }
 .stamp.dept-color-1 ~ .viewport .mceContentBody h2 {
-  color: #3b1151;
+  color: #3B1151;
 }
 .stamp.dept-color-2 ~ .viewport .mceContentBody h2 {
   color: #006e8b;
 }
 .stamp.dept-color-3 ~ .viewport .mceContentBody h2 {
-  color: #5c2483;
+  color: #5C2483;
 }
 .stamp.dept-color-4 ~ .viewport .mceContentBody h2 {
-  color: #46bab8;
+  color: #46BAB8;
 }
 .mceContentBody h3 {
   font-weight: 300;
@@ -115,16 +115,16 @@
   background-color: lightgray;
 }
 .stamp.dept-color-1 ~ .viewport .mceContentBody blockquote {
-  box-shadow: -5px 5px 0px #3b1151;
+  box-shadow: -5px 5px 0px #3B1151;
 }
 .stamp.dept-color-2 ~ .viewport .mceContentBody blockquote {
   box-shadow: -5px 5px 0px #006e8b;
 }
 .stamp.dept-color-3 ~ .viewport .mceContentBody blockquote {
-  box-shadow: -5px 5px 0px #5c2483;
+  box-shadow: -5px 5px 0px #5C2483;
 }
 .stamp.dept-color-4 ~ .viewport .mceContentBody blockquote {
-  box-shadow: -5px 5px 0px #46bab8;
+  box-shadow: -5px 5px 0px #46BAB8;
 }
 .mceContentBody blockquote p {
   display: block;
@@ -137,13 +137,13 @@
   color: #006e8b;
 }
 .stamp.dept-color-2 ~ .viewport .mceContentBody blockquote p {
-  color: #3b1151;
+  color: #3B1151;
 }
 .stamp.dept-color-3 ~ .viewport .mceContentBody blockquote p {
-  color: #007b9a;
+  color: #007B9A;
 }
 .stamp.dept-color-4 ~ .viewport .mceContentBody blockquote p {
-  color: #3b1151;
+  color: #3B1151;
 }
 .mceContentBody blockquote:before {
   content: '';
@@ -165,16 +165,16 @@
   left: 5px;
 }
 .stamp.dept-color-1 ~ .viewport .mceContentBody blockquote:after {
-  color: #3b1151;
+  color: #3B1151;
 }
 .stamp.dept-color-2 ~ .viewport .mceContentBody blockquote:after {
   color: #006e8b;
 }
 .stamp.dept-color-3 ~ .viewport .mceContentBody blockquote:after {
-  color: #5c2483;
+  color: #5C2483;
 }
 .stamp.dept-color-4 ~ .viewport .mceContentBody blockquote:after {
-  color: #46bab8;
+  color: #46BAB8;
 }
 .mceContentBody h1, .mceContentBody h4, .mceContentBody h5, .mceContentBody h6 {
   text-decoration: line-through;
@@ -182,3 +182,5 @@
 .mceContentBody a[target=_blank], .mceContentBody a[target=blank] {
   text-decoration: line-through;
 }
+
+/*# sourceMappingURL=tiny-mce.css.map */
